[package]
name = "tgw"
version = "0.1.0"
edition = "2021"
authors = ["Stanislav Ivkin <109stas@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
docx-rs = { git = "https://github.com/bokuweb/docx-rs" }
anyhow = "1.0.52"
log = "0.4.14"
wasm-bindgen = "0.2.78"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "0.2.0"
js-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
